# oci-registry

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
components/registry/: Cargo.toml
components/registry/.wash/: config.yaml
components/registry/src/: digest.rs  error.rs  http.rs  lib.rs  name.rs  oci.rs  storage.rs  tests.rs  ui.rs
deploy/: workload.yaml
tests/: integration.sh
tools/: deploy.sh  undeploy.sh
