[workspace]
resolver = "2"
members = ["components/registry"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LiamRandall/oci-registry"
publish = false

[profile.release]
# Small, self-contained components. `strip` + `lto` keep the .wasm tiny so
# cold-start (scale-from-zero) stays cheap.
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
